--- a/index.html
+++ b/index.html
@@ -349,9 +349,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
     <script>
         // API URL - production uchun moslashtirilgan
-        const API_BASE_URL = window.location.hostname === 'localhost' 
-            ? 'http://localhost:5000/api' 
-            : '/api';
+        const API_BASE_URL = 'https://uyizlang-api.onrender.com/api';
 
         // Xaritani yaratish
         const map = L.map('map', {
